# fp-lab-4

./: README.md  dune-project  file.txt  ocsh.opam
.github/workflows/: ci.yml
lib/: dune  ocsh_parser.ml  ocsh_runtime.ml  runner.ml
test/: dune  test_ocsh.ml
