opam-version: "2.0"
name: "ocsh"
version: "0.1.0"
synopsis: "OCaml shell runner inspired by babashka"
description: "An OCaml-powered shell runner that evaluates OCaml syntax and provides shell helpers."
maintainer: "dev@localhost"
authors: "dev@localhost"
license: "MIT"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.10"}
  "alcotest"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
